# santinhohunter

./: .gitignore  AGENTS.md  SPECS.md  app.json  flake.nix  jest.config.js  jest.setup.ts  package-lock.json  package.json  railway.toml  tsconfig.json
__tests__/: candidateService.test.ts  captureDraft.test.ts  captureStorage.test.ts  matchService.test.ts  rankingService.test.ts  syncService.test.ts  timeService.test.ts  ufService.test.ts
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  history.tsx  hunt.tsx  ranking.tsx  settings.tsx
app/capture/: camera.tsx  manual-search.tsx  review.tsx
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  requirements-face.txt
backend/data/: candidate_embeddings.pedro-marina.json  candidate_embeddings.sample.json
backend/santinho_hunter_api/: __init__.py  capture_store.py  config.py  main.py  models.py  storage.py
backend/santinho_hunter_api/face/: __init__.py  deepface_provider.py  matcher.py  provider.py
backend/santinho_hunter_api/tse/: __init__.py  embeddings.py  photos.py
backend/tests/: test_api.py  test_matcher.py  test_tse_embeddings.py  test_tse_photos.py
docs/: railway.md
railway/: api.toml  web.toml
scripts/: convert-tse-embeddings.py  import-tse-photo-zip.py  run-face-backend.sh  serve-static.js  setup-face-env.sh
src/components/: AppScreen.tsx  CandidateCard.tsx  EmptyState.tsx  PrimaryActionButton.tsx  RankingRow.tsx  TrashCounter.tsx
src/data/: mockCandidates.ts  offices.ts
src/services/: apiCandidate.ts  apiConfig.ts  (+9 more)
tools/: nginx-mobile.conf
(+5 files in other folders)
